--- a/legendariosMinas/src/index.html
+++ b/legendariosMinas/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>LegendariosMinas</title>
-  <base href="https://pablozagnoli.github.io/legendarios/">
+  <!--"https://pablozagnoli.github.io/legendarios/"-->>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
