--- a/front/legendariosMinas/src/index.html
+++ b/front/legendariosMinas/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>LegendariosMinas</title>
   <!--"https://pablozagnoli.github.io/pagLegen/"-->>
-  <base href="https://pablozagnoli.github.io/pagLegen/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
