--- a/front/legendariosMinas/src/index.html
+++ b/front/legendariosMinas/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <title>LegendariosMinas</title>
@@ -10,6 +11,7 @@
   <script src="https://sdk.mercadopago.com/js/v2"></script>
   <script src="https://sdk.mercadopago.com/js/v2">alert('adsadsa')</script>
 </head>
+
 <body>
 
   <script type="text/javascript">
@@ -42,7 +44,7 @@
             // "https://localhost:5001/pagamentos/criar-pagameto"
             // "http://173.224.117.181:40/pagamentos/criar-pagameto"
             return new Promise((resolve, reject) => {
-              fetch("http://173.224.117.181:40/pagamentos/criar-pagameto", {
+              fetch("https://localhost:5001/pagamentos/criar-pagameto", {
                 method: "POST",
                 headers: {
                   "Content-Type": "application/json",
@@ -62,22 +64,49 @@
           },
           onError: (error) => {
             // callback chamado para todos os casos de erro do Brick
-            console.error(error);
+            console.error(error + "OLA!");
           },
         },
       };
 
-      window.paymentBrickController = await bricksBuilder.create(
-        'payment',
-        'containerDePagamento',
-        settings
-      );
+
+
+      try {
+        window.paymentBrickController = await bricksBuilder.create(
+          'payment',
+          'containerDePagamento',
+          settings
+        );
+      } catch (error) {
+        let contator = 1;
+        while (contator < 30) {
+          window.paymentBrickController = await bricksBuilder.create(
+            'payment',
+            'containerDePagamento',
+            settings
+          );
+          contator++;
+          console.log(contator)
+        }
+      }
     };
 
-    setTimeout(6000);
-    renderPaymentBrick(bricksBuilder);
+    try {
+      setTimeout(6000);
+      renderPaymentBrick(bricksBuilder);
+    } catch (error) {
+      let contator = 1;
+      while (contator < 30) {
+        setTimeout(6000);
+        renderPaymentBrick(bricksBuilder);
+        contator++;
+        console.log(contator)
+      }
+    }
+
   </script>
 
   <app-root></app-root>
 </body>
+
 </html>
