--- a/front/legendariosMinas/src/index.html
+++ b/front/legendariosMinas/src/index.html
@@ -9,12 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://sdk.mercadopago.com/js/v2"></script>
-  <script src="https://sdk.mercadopago.com/js/v2">alert('adsadsa')</script>
 </head>
 
 <body>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     const mp = new MercadoPago('TEST-f6ab8d6f-3a19-4e6a-91cf-7e9fce3b67b4');
 
     const bricksBuilder = mp.bricks();
@@ -104,7 +103,7 @@
       }
     }
 
-  </script>
+  </script> -->
 
   <app-root></app-root>
 </body>
