--- a/front/legendariosMinas/src/index.html
+++ b/front/legendariosMinas/src/index.html
@@ -42,6 +42,7 @@
             // callback chamado ao clicar no botão de submissão dos dados
             // "https://localhost:5001/pagamentos/criar-pagameto"
             // "http://173.224.117.181:40/pagamentos/criar-pagameto"
+            euEstou(formData)
             return new Promise((resolve, reject) => {
               fetch("https://localhost:5001/pagamentos/criar-pagameto", {
                 method: "POST",
@@ -105,7 +106,7 @@
 
   </script>
 
-  <app-root></app-root>
+  <app-root #approot1 ></app-root>
 </body>
 
 </html>
