--- a/front/legendariosMinas/src/index.html
+++ b/front/legendariosMinas/src/index.html
@@ -25,6 +25,7 @@
       const settings = {
         initialization: {
           amount: 100, // valor total a ser pago
+          paymentId: '53958642296',
         },
         customization: {
           paymentMethods: {
@@ -56,13 +57,78 @@
           },
         },
       };
-      window.paymentBrickController = await bricksBuilder.create(
-        'payment',
-        'containerpagamento',
-        settings
-      );
+
+      try {
+        await new Promise(f => setTimeout(f, 3000));
+        window.paymentBrickController = await bricksBuilder.create(
+          'payment',
+          'containerpagamento',
+          settings
+        );
+
+      } catch (error) {
+        await new Promise(f => setTimeout(f, 3000));
+        window.paymentBrickController = await bricksBuilder.create(
+          'payment',
+          'containerpagamento',
+          settings
+        );
+
+
+      }
+
     };
+
     renderPaymentBrick(bricksBuilder);
+
+  </script>
+
+  <script>
+
+    const mp2 = new MercadoPago('APP_USR-185bfd07-2552-4ecd-990c-0abbac069d15');
+
+    const bricksBuilder2 = mp2.bricks();
+
+
+
+
+
+    const renderStausScreenBrick = async (bricksBuilder) => {
+      const settings = {
+        initialization: {
+          paymentId: sessionStorage.getItem("numPag"), // id de pagamento gerado pelo Mercado Pago
+        },
+        callbacks: {
+          onReady: () => {
+            // callback chamado quando o Brick estiver pronto
+          },
+          onError: (error) => {
+            // callback chamado para todos os casos de erro do Brick
+          },
+        },
+      };
+
+
+      try {
+        await new Promise(f => setTimeout(f, 3000));
+        window.statusBrickController = await bricksBuilder2.create(
+          'statusScreen',
+          'statuscontainerpagamento',
+          settings
+        );
+
+      } catch (error) {
+        await new Promise(f => setTimeout(f, 3000));
+        window.statusBrickController = await bricksBuilder2.create(
+          'statusScreen',
+          'statuscontainerpagamento',
+          settings
+        );
+      }
+
+    };
+
+    renderStausScreenBrick(bricksBuilder);
 
   </script>
 
